fix: padding on mobile

--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -29,6 +29,7 @@ body {
 
         @include media("<=tablet") {
             padding: 150px 40px;
+            padding-bottom: 100px;
         }
 
 
